Passed schema through to widget

--- a/django_jsonforms/templates/django_jsonforms/jsoneditor.html
+++ b/django_jsonforms/templates/django_jsonforms/jsoneditor.html
@@ -1,3 +1,2 @@
-<div id='editor_holder'>
+<div name="{{ widget.name }}" id='editor_holder' {% include "django/forms/widgets/attrs.html" %}>
 </div>
-<button id='submit_editor'>Submit</button>
