Added hidden field in template, made init code set hidden to editor and disable editor on form submit

--- a/django_jsonforms/templates/django_jsonforms/jsoneditor.html
+++ b/django_jsonforms/templates/django_jsonforms/jsoneditor.html
@@ -1,2 +1,3 @@
-<div name="{{ widget.name }}" id='editor_holder' {% include "django/forms/widgets/attrs.html" %}>
+<div name="{{ widget.name }}" class="editor_holder" {% include "django/forms/widgets/attrs.html" %}>
 </div>
+<input type="hidden" name="{{ widget.name }}"></input>
