--- a/django_jsonforms/templates/django_jsonforms/jsoneditor.html
+++ b/django_jsonforms/templates/django_jsonforms/jsoneditor.html
@@ -1,3 +1,3 @@
 <div name="{{ widget.name }}" class="editor_holder" {% include "django/forms/widgets/attrs.html" %}>
 </div>
-<input type="hidden" name="{{ widget.name }}"></input>
+<input type="hidden" name="{{ widget.name }}" {% if widget.value != None %} value="{{ widget.value|stringformat:'s' }}"{% endif %}></input>
