--- a/django_jsonforms/tests/testapp/templates/form.html
+++ b/django_jsonforms/tests/testapp/templates/form.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 {{ form.media }}
 </head>
 <body>
