Finished first selenium tests

--- a/django_jsonforms/tests/testapp/templates/form.html
+++ b/django_jsonforms/tests/testapp/templates/form.html
@@ -4,6 +4,11 @@
 {{ form.media }}
 </head>
 <body>
+<form method="post">
+{% csrf_token %}
+{{ form.json.errors }}
 {{ form.as_p }}
+<input id="submit_button" type="submit" value="Submit">
+</form>
 </body>
 </html>
